--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,9 +42,9 @@ repos:
     hooks:
       - id: docformatter
         args: ["--in-place", "--wrap-descriptions", "79"]
-  - repo: https://github.com/open-mmlab/pre-commit-hooks
-    rev: v0.2.0  # Use the ref you want to point at
-    hooks:
-      - id: check-algo-readme
-      - id: check-copyright
-        args: ["mmdet"]  # replace the dir_to_check with your expected directory to check
+  # - repo: https://github.com/open-mmlab/pre-commit-hooks
+  #   rev: v0.2.0  # Use the ref you want to point at
+  #   hooks:
+  #     - id: check-algo-readme
+  #     - id: check-copyright
+  #       args: ["mmdet"]  # replace the dir_to_check with your expected directory to check
